--- a/.eslintrc
+++ b/.eslintrc
@@ -1,29 +1,29 @@
 {
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src/client"]
+      }
+    }
+  },
   "parser": "babel-eslint",
   "extends": [
-    "standard",
-    "plugin:jsx-control-statements/recommended"
+    "prettier",
+    "plugin:react/recommended"
   ],
   "env": {
+    "es6": true,
     "browser": false
   },
   "plugins": [
-    "react",
-    "jsx-control-statements"
+    "prettier"
   ],
   "rules": {
-    "semi": [2, "never"],
-    "comma-dangle": [2, "always-multiline"],
-    "space-infix-ops": 0,
-    "max-len": [2, 1000, 2],
-    "indent": ["error", 2, { "MemberExpression": 0 }],
-    "space-before-function-paren": ["error", {
-        "anonymous": "always",
-        "named": "never",
-        "asyncArrow": "always"
-    }],
-    "react/jsx-uses-react": 1,
-    "react/jsx-uses-vars": 2,
-    "padded-blocks": [2, {"classes": "always"}]
+    "prettier/prettier": "error",
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "import/no-named-as-default": 0
+  },
+  "parserOptions": {
+    "sourceType": "module"
   }
 }
