--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "immutable": "^3.8.2",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "3.3.1",
+    "styled-components": "^3.4.10",
     "jquery.easing": "^1.4.1",
     "magnific-popup": "^1.1.0",
     "nodemon": "^1.19.0",
@@ -38,6 +39,7 @@
     "react": "16.4.2",
     "react-bootstrap": "0.32.3",
     "react-dom": "16.4.2",
+    "react-loading": "^2.0.3",
     "react-redux": "5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -73,14 +75,14 @@
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.0.1",
+    "eslint-config-prettier": "^3.6.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-jsx-control-statements": "^2.2.1",
     "eslint-plugin-mocha": "^5.2.0",
     "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-prettier": "^2.7.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
@@ -96,7 +98,7 @@
     "mini-css-extract-plugin": "0.4.2",
     "node-sass": "4.9.3",
     "postcss-loader": "3.0.0",
-    "prettier": "^1.14.2",
+    "prettier": "^1.18.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-autosuggest": "9.4.0",
     "react-hot-loader": "4.3.5",
@@ -112,7 +114,6 @@
     "resolve-url-loader": "2.3.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
-    "styled-components": "^3.4.10",
     "url-loader": "1.1.1",
     "webpack": "4.17.1",
     "webpack-cdn-plugin": "2.2.1",
